[package]
name = "rust-neat"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "rust_neat"
# crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]